# stringly-python

./: Cargo.toml  README.md
src/: lib.rs  text.rs
